# fragance-vending-machine

./: .gitignore  CLAUDE.md  Cargo.toml  ESP32-PINES.md  GABINETE-DIMENSIONES.md  README.md  ROADMAP.md
.claude/: settings.json
database/: schema.sql
esp32/dispenser/: dispenser.ino
frontend/: app.js  index.html  metrics.html  operator.css  operator.html  operator.js  preview-fonts.html  style.css
kiosk/: Cargo.toml
kiosk/src/: main.rs
server/: Cargo.toml
server/frontend/: metrics.html
server/src/: api.rs  db.rs  main.rs
src/: main.rs  metrics.rs  sync.rs
src/api/: inventory.rs  metrics_route.rs  mod.rs  routes.rs
src/database/: db.rs  models.rs
src/hardware/: arduino.rs  dispenser.rs  mod.rs  uart.rs
src/payment/: mercadopago.rs  mod.rs  payment_simulator.rs
